--- a/deployments/Dockerfile.dev
+++ b/deployments/Dockerfile.dev
@@ -1,5 +1,5 @@
 FROM python:3.12-slim
 WORKDIR /app
-COPY . .
+COPY ./requirements.txt .
 RUN pip install -r requirements.txt
-CMD ["python", "bytebox_apps/master/main.py"]
+COPY ./deployments/docker-entrypoint.dev.sh .
