--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "docker>=7.1.0",
     "fastapi[standard]>=0.118.0",
     "pyjwt>=2.9.0",
+    "pytest>=8.3.5",
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.33.0",
 ]
